# bte

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FEATURE_ROADMAP.md  FUTURE.md  README.md  REALWORLD_TESTING.md  TESTING_PLAN.md  clippy.toml  deny.toml  run-realworld-tests.sh
.github/workflows/: ci.yml  release.yml  test.yml
docs/: API.md  PERFORMANCE_METRICS.md  PHASE2_RESEARCH.md  PHASE2_TUI_INTEGRATION.md  TUTORIAL.md  V0_3_0_SPECIFICATION.md
examples/: hello.yaml
examples/cloud/: cloud_test.yaml
examples/protocol/: ecma48.yaml  xterm.yaml
examples/ratatui/: Cargo.toml  counter.yaml  form.yaml  layout.yaml
scenarios/: colors-test.yaml  custom-invariant-test.yaml  fuzzy-match.yaml  phase1-features-test.yaml  visual-regression.yaml
scenarios/failures/: command-failures.yaml  network-failures.yaml
scenarios/interactive/: bash-operations.yaml
scenarios/local/: file-processing.yaml  git-workflow.yaml  simple-test.yaml
scenarios/network/: http-api.yaml  package-manager.yaml  weather-api.yaml
scenarios/real-world/: bash-prompt.yaml  (+4 more)
scripts/: ci-runner.sh
src/: ansi.rs  bench.rs  benchmark.rs  ci.rs  compat.rs  defaults.rs  determinism.rs  ecma48.rs  explain.rs  flaky.rs  fuzzing.rs  fuzzy.rs  invariants.rs  invariants_v2.rs  io_loop.rs  keys.rs  limits.rs  llm.rs  main.rs  parallel.rs  platform.rs  process.rs  pty.rs  ratatui.rs  replay.rs  runner.rs  safe_regex.rs  scenario.rs  screen.rs  screenshot.rs  security.rs  tags.rs  termination.rs  timing.rs  trace.rs  vtparse.rs  wasm.rs
tests/: scenario_tests.rs
(+7 files in other folders)
