[package]
name = "bte"
version = "0.1.0"
edition = "2021"
description = "Behavioral Testing Engine for CLI/TUI applications"
license = "MIT"

[[bin]]
name = "bte"
path = "src/main.rs"

[dependencies]
nix = { version = "0.29", features = ["term", "signal", "poll", "fs"] }
libc = "0.2"
bitflags = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
fastrand = "2.0"

[dev-dependencies]

[profile.release]
lto = true
