[package]
name = "bte"
version = "0.2.0"
edition = "2021"
rust-version = "1.82.0"
description = "Behavioral Testing Engine for CLI/TUI applications"
license = "MIT"

[[bin]]
name = "bte"
path = "src/main.rs"

[dependencies]
nix = { version = "0.29", features = ["term", "signal", "poll", "fs"] }
libc = "0.2"
bitflags = { version = "2.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
regex = "1.10"
lru = "0.12"
fastrand = "2.0"
seahash = "4.1"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]

[profile.release]
lto = true
